# HamsterBearDesktop

./: .gitignore  CMakeLists.txt  README.md
src/gui/: ui_main.c  ui_main.glade
